fix: html문 title및 icon 수정

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
-    <style type="text/css">
-      .rdrDefinedRangesWrapper {
-        display: none;
-      }
-    </style>
+    <link rel="icon" href="%PUBLIC_URL%/LEVER_LOGO2.png" />
+    <title>LEVER</title>
   </head>
   <body>
     <div id="root"></div>
