feat : Date Range Modal 메인 페이지에서만 렌더링 조건 추가

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%PUBLIC_URL%/LEVER_LOGO2.png" />
     <title>LEVER</title>
+    <style type="text/css">
+      .rdrDefinedRangesWrapper {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
